--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ click==8.1.8
 colorama==0.4.6
 cryptography==44.0.2
 Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
 gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
@@ -11,4 +13,7 @@ MarkupSafe==3.0.2
 packaging==24.2
 psycopg2-binary==2.9.10
 pycparser==2.22
+pyOpenSSL==25.0.0
+SQLAlchemy==2.0.40
+typing_extensions==4.13.2
 Werkzeug==3.1.3
