--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,38 @@
+beautifulsoup4==4.13.4
 blinker==1.9.0
-cffi==1.17.1
+certifi==2025.4.26
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
-cryptography==44.0.2
+filelock==3.18.0
 Flask==3.1.0
-Flask-SQLAlchemy==3.1.1
-greenlet==3.1.1
+Flask-WTF==1.2.1
+fsspec==2025.3.2
 gunicorn==23.0.0
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
-MarkupSafe==3.0.2
-packaging==24.2
+joblib==1.4.2
+MarkupSafe==3.0فران
+mpmath==1.3.0
+networkx==3.4.2
+numpy==1.26.4
+packaging==25.0
+pandas==2.2.3
 psycopg2-binary==2.9.10
-pycparser==2.22
-pyOpenSSL==25.0.0
-SQLAlchemy==2.0.40
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2025.2
+requests==2.31.0
+scikit-learn==1.5.2
+scipy==1.15.2
+six==1.17.0
+soupsieve==2.7
+sympy==1.14.0
+threadpoolctl==3.6.0
+torch==2.4.1
 typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
 Werkzeug==3.1.3
+WTForms==3.2.1
