--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.4.2
-MarkupSafe==3.0فران
+MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==1.26.4
