--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,41 @@
+altgraph==0.17.4
 beautifulsoup4==4.13.4
 blinker==1.9.0
+cachelib==0.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 filelock==3.18.0
 Flask==3.1.0
-flask-caching==2.1.0
+Flask-Caching==2.1.0
 Flask-WTF==1.2.1
+fsspec==2025.3.2
 gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 joblib==1.4.2
 MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
 numpy==1.26.4
+packaging==25.0
 pandas==2.2.3
+pefile==2023.2.7
 psycopg2-binary==2.9.10
+pyinstaller==6.13.0
+pyinstaller-hooks-contrib==2025.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytz==2025.2
+pywin32-ctypes==0.2.3
 requests==2.32.3
 scikit-learn==1.5.2
 scipy==1.15.2
 six==1.17.0
 soupsieve==2.7
+sympy==1.14.0
 threadpoolctl==3.6.0
 torch==2.4.1
 typing_extensions==4.13.2
